	<<< Change Log >>>

01/02/2018
	* Worked on Coeff2D. Diffusion term, Essential, Point source, Point Value, Natural
	are written
	* Coeff2D:PointValue is implemented using Lagrange multiplier and DeltaCoefficient
	* engine is fixed to work with real value problem
	* Lagrange multiplier can be array distributed among nodes.
	* call to verify_setting is added in engine so that it checks setting before assembling
	the matrix. In order to use this, each module shoud implement verify_setting method.
	* _sel_index=-1 indicates not to restrict coefficient.
	
12/15/2017	
        ** fixed sel_button to work with mixed triangle and quad surfaces.
	
11/14/2017
	** fixed refine=1 when loading mesh file for visualization.
	** fixed EM2Da_PEC, EM3D_PEC. These BC now apply Et=0 properly w/o relying
	   on the initialization of solution vector by engine.
	** various improvement of dialog link behaviors.
        ** EM2Da_ExtJ is added for volumetric current source.
	** Dynamic loading of all installed physics modules 
11/07/2017
	** gl_plot_sol and mfem_viewer is modefided to handle a geometry which
	uses different types of elements.
	** many updates made to support em2da is merged to master
	
09/20/2017
        ** merged scripts in project tree and remote coonections
	Remote connection functionality is rewritten to be universal.
	Server side scripts should absorb the difference between
	remote servers.

	Toggle edge/point buttons are added
	Selecting vertex shows the vertex coordinates on the status
	bar.
	
09/04/2017

	** Geometry building is reorganized to a list of geometry creation
	commads

        object created from givn coordinates
           Point/Circle/Rect/Line/Polygon
        object created from given entities
           Spline -> Points to Spline
           CreateLine -> Points to multiple Lines
           LineLoop -> Lines to LineLoop
           CreateSurface -> Lines to PlaneSurface
           SurfaceLoop -> Surfacess to SurfaceLoops